--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,14 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
 
     //For Building Responsive UI
     implementation "com.intuit.sdp:sdp-android:1.0.6"
     implementation "com.intuit.ssp:ssp-android:1.0.6"
+    /////////////////For navigation compose
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha03"
+
+
 }
