--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeAndroidPractice">
         <activity
-            android:name=".SelfBioActivity"
-            android:label="@string/title_activity_self_bio"
-            android:theme="@style/Theme.ComposeAndroidPractice"
-            android:exported="true">
+            android:name=".StartActivity"
+            android:exported="true"
+            android:label="@string/title_activity_start"
+            android:theme="@style/Theme.ComposeAndroidPractice" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,12 +21,26 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.compose.GmailCloneActivity"
+            android:exported="false"
+            android:label="@string/title_activity_gmail_clone"
+            android:theme="@style/Theme.ComposeAndroidPractice" />
+        <activity
+            android:name=".SelfBioActivity"
+            android:exported="true"
+            android:label="@string/title_activity_self_bio"
+            android:theme="@style/Theme.ComposeAndroidPractice">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ComposeAndroidPractice">
-
-        </activity>
+            android:theme="@style/Theme.ComposeAndroidPractice" />
     </application>
 
 </manifest>
